# obmnl-flask_assignment

./: app.py  pyproject.toml
templates/: transactions.html
