[tool.poetry]
name = "obmnl-flask-assignment"
version = "0.1.0"
description = "Practice Lab for transaction record"
authors = ["wansu27 <ridwan.setiawan@shippit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "2.2.2"
werkzeug = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
